maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: not found: value test
    test(x,y) match{
    ^